--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,12 @@
 {
-  "dependencies": {
+  "name": "wy-cet-api",
+  "version": "1.0.0",
+  "description": "waangyuan info studio cet api",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+    "dependencies": {
     "body-parser": "^1.15.2",
     "cheerio": "^0.20.0",
     "express": "^4.14.0",
@@ -10,5 +17,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "supertest": "^2.0.0"
-  }
+  },
+  "author": "J3n5en",
+  "license": "MIT"
 }
